--- a/Trabajo/cliente_jardininfantil/android/app/src/main/AndroidManifest.xml
+++ b/Trabajo/cliente_jardininfantil/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cliente_jardininfatil">
+    package="com.example.cliente_jardininfantil">
    <application
-        android:label="cliente_jardininfatil"
+        android:label="cliente_jardininfantil"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
