--- a/Trabajo/cliente_jardininfantil/pubspec.yaml
+++ b/Trabajo/cliente_jardininfantil/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.17.0
   flutter_slidable: ^1.3.0
   http: ^0.13.4
+  custom_text: ^0.5.1
 
 dev_dependencies:
   flutter_test:
