--- a/Trabajo/cliente_jardininfantil/pubspec.yaml
+++ b/Trabajo/cliente_jardininfantil/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_slidable: ^1.3.0
   http: ^0.13.4
   custom_text: ^0.5.1
+  provider: 
 
 dev_dependencies:
   flutter_test:
